tests/fixtures/invalid/none_in_float.py
# Cannot use 'in' with None and Float
x: bool = None in 1.0
